--- a/scss/component/_navbar.scss
+++ b/scss/component/_navbar.scss
@@ -149,8 +149,7 @@
             }
 
             @include media-breakpoint-up($bp) {
-                flex-direction: row;
-                flex-wrap: nowrap;
+                flex-flow: row nowrap;
                 justify-content: flex-start;
 
                 .navbar-nav {
@@ -173,12 +172,10 @@
                     flex-wrap: nowrap;
                 }
 
-                // scss-lint:disable ImportantRule
                 .navbar-collapse {
-                    display: flex !important;
+                    display: flex !important;   // stylelint-disable-line declaration-no-important
                     flex-basis: auto;
                 }
-                // scss-lint:enable ImportantRule
 
                 .navbar-toggle {
                     display: none;
