--- a/scss/functions/_rem-calc.scss
+++ b/scss/functions/_rem-calc.scss
@@ -1,4 +1,4 @@
-// scss-lint:disable ZeroUnit
+// stylelint-disable length-zero-no-unit
 
 // Remove the unit of a length
 // From: https://css-tricks.com/snippets/sass/strip-unit-function/
