--- a/scss/utilities/_flex.scss
+++ b/scss/utilities/_flex.scss
@@ -1,4 +1,4 @@
-// scss-lint:disable ImportantRule
+// stylelint-disable declaration-no-important
 
 // Flexbox utilities
 // Custom styles for additional flexbox alignment
