--- a/docs/assets/scss/_player.scss
+++ b/docs/assets/scss/_player.scss
@@ -1,12 +1,12 @@
-//scss-lint:disable all
+// stylelint-disable declaration-no-important
 
 // TODO: Fix this file - bad layout and whatnot for now until after launch
 
 .player-fulldisplay .player-transcript {
     position: absolute;
     top: 0;
-    left: auto;
     right: 0;
+    left: auto;
     width: 25%;
     height: 80%;
 }
@@ -30,10 +30,10 @@
     width: 34px;
     text-align: center;
 }
-.player-time-remainder:before {
+.player-time-remainder::before {
     display: inline-block;
-    content: "-";
     line-height: inherit;
+    content: "-";
 }
 .player-seek {
     display: inline-flex;
@@ -44,9 +44,7 @@
     vertical-align: middle;
 }
 .player-seek .progress-bar {
-    -webkit-transition-duration: 0s;
-         -o-transition-duration: 0s;
-            transition-duration: 0s;
+    transition-duration: 0s;
 }
 .player-seek label {
     display: none;
@@ -109,33 +107,25 @@
     max-width: 100% !important;
     height: 100% !important;
     max-height: 100%;
-    margin: 0;
     padding: 0;
-	background: #000000;
+    margin: 0;
+    background: #000;
 }
 .player-fulldisplay .player-wrapper {
     position: absolute;
-    left: 0;
-    bottom: 20px;
     right: 0;
+    bottom: 20px;
+    left: 0;
     margin-top: 0;
     text-align: center;
 }
-/*
-.player-fulldisplay video {
-    width: 100% !important;
-    max-width: 100%;
-    height: 100% !important;
-    max-height: 100%;
-}
-*/
 .player-fulldisplay .player {
     display: inline-block;
-    background-color: #fff;
-    color: #222;
-    border-radius: 5px;
     padding: 5px;
     margin: 0;
+    color: #222;
+    background-color: #fff;
+    border-radius: 5px;
 }
 
 .player-caption-wrapper {
@@ -164,16 +154,16 @@
     position: absolute;
     top: 50%;
     left: 5px;
-    margin-top: -0.7em;
+    margin-top: -.7em;
     color: #5cb85c;
 }
-.player-script-scroll-check .player-script-scroll-check-icon:before {
+.player-script-scroll-check .player-script-scroll-check-icon::before {
     display: block;
-    font-family: 'FontAwesome';
+    font-family: FontAwesome;
     color: #d9534f;
     content: "\f00d";
 }
-.player-script-scroll-check.active .player-script-scroll-check-icon:before  {
+.player-script-scroll-check.active .player-script-scroll-check-icon::before  {
     color: #5cb85c;
     content: "\f00c";
 }
@@ -183,20 +173,12 @@
 .player-fulldisplay.player-inactive .player {
     visibility: hidden;
     opacity: 0;
-    -webkit-transition: visibility 1.0s, opacity 1.0s;
-       -moz-transition: visibility 1.0s, opacity 1.0s;
-        -ms-transition: visibility 1.0s, opacity 1.0s;
-         -o-transition: visibility 1.0s, opacity 1.0s;
-            transition: visibility 1.0s, opacity 1.0s;
+    transition: visibility 1s, opacity 1s;
 }
 .player-fulldisplay.player-inactive.player-paused .player {
     visibility: visible;
     opacity: 1;
-    -webkit-transition: all 0.1s;
-       -moz-transition: all 0.1s;
-        -ms-transition: all 0.1s;
-         -o-transition: all 0.1s;
-            transition: all 0.1s;
+    transition: all .15s;
 }
 
 .player-notime .player-time-current,
@@ -219,31 +201,17 @@
     background-color: #f5f5f5;
     border: 1px solid #e3e3e3;
     border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 .player-transcript-active {
-    background-color: #FF6;
+    background-color: #ff6;
 }
 .player-transcript-seekpoint:hover {
-	background: #CF6;
-	cursor: pointer;
+    cursor: pointer;
+    background: #cf6;
 }
 .player-scriptshow .player-transcript {
     display: block;
-}
-.player-scriptshow:-moz-full-screen video {
-    width: 74% !important;
-    height: auto !important;
-}
-.player-scriptshow:-webkit-full-screen video {
-    width: 74% !important;
-    height: auto !important;
-}
-.player-scriptshow:-ms-fullscreen video {
-    position: -ms-device-fixed !important;
-    width: 74% !important;
-    height: auto !important;
 }
 .player-scriptshow:fullscreen video {
     width: 74% !important;
@@ -254,41 +222,39 @@
     cursor: pointer;
 }
 .player-unstarted .embed-fluid::after {
-    display: inline-block;
     position: absolute;
     top: 50%;
     left: 50%;
+    display: inline-block;
     width: 70px;
     height: 70px;
+    padding: 2px 7px 3px;
     margin-top: -35px;
     margin-left: -35px;
-    padding: 2px 7px 3px;
-    font-family: 'FontAwesome';
+    font-family: FontAwesome;
     font-size: 66px;
     line-height: 1;
     color: #fff;
+    pointer-events: none;
     content: "\f144";
     background-color: #000;
-    border-radius: 50% 50%;
-    filter: alpha(opacity=75);
-    opacity: 0.75;
-    pointer-events: none;
+    border-radius: 50%;
+    opacity: .75;
 }
 .player-unstarted .embed-fluid:hover::after {
-    filter: alpha(opacity=100);
     opacity: 1;
 }
 
 .player-description {
-    background-color: #fff;
-    border: 1px solid #e3e3e3;
     padding: .5rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    background-color: #fff;
+    border: 1px solid #e3e3e3;
 }
 .player-description-seekpoint:hover {
-	background: #CF6;
-	cursor: pointer;
+    cursor: pointer;
+    background: #cf6;
 }
 
 .player-describe {
@@ -315,12 +281,12 @@
     bottom: 1rem;
     left: 50%;
     display: block;
-    padding: .25rem;
     max-width: 100%;
+    padding: .25rem;
     font-size: .9375rem;
-    text-align: center;
     color: #fff;
-    background-color: rgba(0,0,0,.65);
+    text-align: center;
+    background-color: rgba(0, 0, 0, .65);
     border-radius: .25rem;
     transform: translateX(-50%);
 }
