--- a/scss/component/_close.scss
+++ b/scss/component/_close.scss
@@ -20,11 +20,11 @@
 // If you want the anchor version, it requires `href="#"`.
 // See https://developer.mozilla.org/en-US/docs/Web/Events/click#Safari_Mobile
 
-// scss-lint:disable QualifyingElement
+// stylelint-disable selector-no-qualifying-type, property-no-vendor-prefix
 button.close {
     padding: 0;
     background: transparent;
     border: 0;
     -webkit-appearance: none;
 }
-// scss-lint:enable QualifyingElement
+// stylelint-enable selector-no-qualifying-type, property-no-vendor-prefix
