--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -1,3 +1,5 @@
+// stylelint-disable selector-no-qualifying-type
+
 // The dropdown wrapper (`<div>`) and submenu (`<ul>`)
 .dropup,
 .dropdown,
@@ -22,21 +24,6 @@
     }
 }
 
-.dropup {
-    .dropdown-toggle {
-        &::after {
-            @include caret-up();
-        }
-    }
-    &.open {
-        .dropdown-toggle {
-            &::after {
-                @include caret-down();
-            }
-        }
-    }
-}
-
 // The dropdown menu
 .dropdown-menu {
     position: absolute;
@@ -58,6 +45,89 @@
     border: $dropdown-border-width solid $dropdown-border-color;
     @include border-radius($dropdown-attach-border-radius $dropdown-border-radius $dropdown-border-radius $dropdown-border-radius);
     @include box-shadow($dropdown-box-shadow);
+}
+
+// Dropdown submenu additions
+.dropdown-submenu {
+    > .dropdown-menu {
+        top: 0;
+        left: 100%;
+        margin-top: calc(-#{($dropdown-spacer + $dropdown-padding-y)} + #{$border-width});
+        @include border-radius($dropdown-attach-border-radius $dropdown-border-radius $dropdown-border-radius $dropdown-border-radius);
+    }
+
+    > a,
+    > .dropdown-item {
+        &::after {
+            position: absolute;
+            top: 50%;
+            right: $dropdown-caret-spacer-x;
+            margin-top: -$dropdown-caret-width;
+            @include caret(end, $dropdown-caret-width, $dropdown-caret-color);
+        }
+
+        &.active:not(:hover):not(:focus)::after {
+            @include caret-end($dropdown-caret-width, $dropdown-caret-active-color);
+        }
+    }
+}
+
+// Open state for the dropdown and dropdown-toggle
+.open {
+    // Show the menu
+    > .dropdown-menu {
+        display: block;
+    }
+    // Reverse toggle caret
+    .dropdown-toggle {
+        &::after {
+            @include caret-up();
+        }
+    }
+}
+
+// Allow for menus to go left - aligning to right side of the control
+.dropdown-menu-reverse {
+    .dropdown-menu {
+        right: 0;
+        left: auto;
+        @include border-radius($dropdown-border-radius $dropdown-attach-border-radius $dropdown-border-radius $dropdown-border-radius);
+    }
+}
+
+// Submenu alignment
+// The `.dropdown-subalign-*` classes are added automatically by the dropdown.js widget
+// This removes the need for overly convoluted CSS rules
+.dropdown-subalign-forward {
+    > .dropdown-menu {
+        right: auto;
+        left: 100%;
+        margin-right: -($border-width * 2);
+        margin-left: 0;
+        @include border-radius($dropdown-attach-border-radius $dropdown-border-radius $dropdown-border-radius $dropdown-border-radius);
+    }
+}
+
+.dropdown-subalign-reverse {
+    > .dropdown-menu {
+        right: 100%;
+        left: auto;
+        margin-right: 0;
+        margin-left: -($border-width * 2);
+        @include border-radius($dropdown-border-radius $dropdown-attach-border-radius $dropdown-border-radius $dropdown-border-radius);
+    }
+    > a,
+    > .dropdown-item {
+        &::after {
+            right: auto;
+            left: $dropdown-caret-spacer-x;
+            @include caret-start($dropdown-caret-width, $dropdown-caret-color);
+        }
+
+        &.active:not(:hover):not(:focus)::after {
+            @include caret-end($dropdown-caret-width, $dropdown-caret-color);
+        }
+    }
 }
 
 // Links within a dropdown menu
@@ -111,53 +181,6 @@
     }
 }
 
-// Dropdown submenu additions
-.dropdown-submenu {
-    > .dropdown-menu {
-        top: 0;
-        left: 100%;
-        margin-top: calc(-#{($dropdown-spacer + $dropdown-padding-y)} + #{$border-width});
-        @include border-radius($dropdown-attach-border-radius $dropdown-border-radius $dropdown-border-radius $dropdown-border-radius);
-    }
-
-    > a,
-    > .dropdown-item {
-        &::after {
-            position: absolute;
-            top: 50%;
-            right: $dropdown-caret-spacer-x;
-            margin-top: -$dropdown-caret-width;
-            @include caret(end, $dropdown-caret-width, $dropdown-caret-color);
-        }
-
-        &.active:not(:hover):not(:focus)::after {
-            @include caret-end($dropdown-caret-width, $dropdown-caret-active-color);
-        }
-    }
-}
-
-// Open state for the dropdown and dropdown-toggle
-.open {
-    // Show the menu
-    > .dropdown-menu {
-        display: block;
-    }
-    // Reverse toggle caret
-    .dropdown-toggle {
-        &::after {
-            @include caret-up();
-        }
-    }
-    // Reverse dropup toggle caret
-    .dropup {
-        .dropdown-toggle {
-            &::after {
-                @include caret-down();
-            }
-        }
-    }
-}
-
 // Dropdown section headers
 .dropdown-header {
     display: block;
@@ -186,15 +209,25 @@
 }
 
 // Allow for dropdowns to go bottom up (aka, dropup-menu)
-// Just add .dropup after the standard .dropdown class and you're set.
+// Add .dropup after the standard .dropdown class
 .dropup {
     // Reverse the caret
     .caret {
         @include caret-up();
     }
+    .dropdown-toggle {
+        &::after {
+            @include caret-up();
+        }
+    }
     &.open {
         .caret {
             @include caret-down();
+        }
+        .dropdown-toggle {
+            &::after {
+                @include caret-down();
+            }
         }
     }
 
@@ -214,6 +247,23 @@
             margin-top: 0;
             margin-bottom: calc(-#{($dropdown-spacer + $dropdown-padding-y)} + #{$border-width});
             @include border-radius($dropdown-border-radius $dropdown-border-radius $dropdown-border-radius $dropdown-attach-border-radius);
+        }
+    }
+
+    // Dropup corner overrides
+    &.dropdown-menu-reverse {
+        .dropdown-menu {
+            @include border-radius($dropdown-border-radius $dropdown-border-radius $dropdown-attach-border-radius $dropdown-border-radius);
+        }
+    }
+    .dropdown-subalign-forward {
+        > .dropdown-menu {
+            @include border-radius($dropdown-border-radius $dropdown-border-radius $dropdown-border-radius $dropdown-attach-border-radius);
+        }
+    }
+    .dropdown-subalign-reverse {
+        > .dropdown-menu {
+            @include border-radius($dropdown-border-radius $dropdown-border-radius $dropdown-attach-border-radius $dropdown-border-radius);
         }
     }
 }
@@ -239,68 +289,5 @@
         right: $dropdown-back-spacer-x;
         left: auto;
         @include caret-end($dropdown-back-width, $dropdown-back-color);
-    }
-}
-
-// Allow for menus to go left - aligning to right side of the control
-.dropdown-menu-reverse {
-    .dropdown-menu {
-        right: 0;
-        left: auto;
-        @include border-radius($dropdown-border-radius $dropdown-attach-border-radius $dropdown-border-radius $dropdown-border-radius);
-    }
-}
-
-// Submenu alignment
-// The `.dropdown-subalign-*` classes are added automatically by the dropdown.js widget
-// This removes the need for overly convoluted CSS rules
-.dropdown-subalign-forward {
-    > .dropdown-menu {
-        right: auto;
-        left: 100%;
-        margin-right: -($border-width * 2);
-        margin-left: 0;
-        @include border-radius($dropdown-attach-border-radius $dropdown-border-radius $dropdown-border-radius $dropdown-border-radius);
-    }
-}
-
-.dropdown-subalign-reverse {
-    > .dropdown-menu {
-        right: 100%;
-        left: auto;
-        margin-right: 0;
-        margin-left: -($border-width * 2);
-        @include border-radius($dropdown-border-radius $dropdown-attach-border-radius $dropdown-border-radius $dropdown-border-radius);
-    }
-    > a,
-    > .dropdown-item {
-        &::after {
-            right: auto;
-            left: $dropdown-caret-spacer-x;
-            @include caret-start($dropdown-caret-width, $dropdown-caret-color);
-        }
-
-        &.active:not(:hover):not(:focus)::after {
-            @include caret-end($dropdown-caret-width, $dropdown-caret-color);
-        }
-    }
-}
-
-// Dropup corner overrides
-.dropup {
-    &.dropdown-menu-reverse {
-        .dropdown-menu {
-            @include border-radius($dropdown-border-radius $dropdown-border-radius $dropdown-attach-border-radius $dropdown-border-radius);
-        }
-    }
-    .dropdown-subalign-forward {
-        > .dropdown-menu {
-            @include border-radius($dropdown-border-radius $dropdown-border-radius $dropdown-border-radius $dropdown-attach-border-radius);
-        }
-    }
-    .dropdown-subalign-reverse {
-        > .dropdown-menu {
-            @include border-radius($dropdown-border-radius $dropdown-border-radius $dropdown-attach-border-radius $dropdown-border-radius);
-        }
     }
 }
