--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -71,13 +71,13 @@
     border: $input-border-width solid $input-group-addon-border-color;
     @include border-radius($border-radius);
 
-    // scss-lint:disable QualifyingElement
     // Nuke default margins from checkboxes and radios to vertically center within.
+    // stylelint-disable selector-no-qualifying-type
     input[type="radio"],
     input[type="checkbox"] {
         margin-top: 0;
     }
-    // scss-lint:enable QualifyingElement
+    // stylelint-enable selector-no-qualifying-type
 }
 
 .has-sucess,
