--- a/scss/component/_tooltip.scss
+++ b/scss/component/_tooltip.scss
@@ -10,9 +10,12 @@
     word-wrap: break-word;
     opacity: 0;
 
+    // Showing
     &.in {
         opacity: $tooltip-opacity;
     }
+
+    // Directions
     &.top {
         padding: $tooltip-arrow-width 0;
         margin-top: -$tooltip-margin;
@@ -29,27 +32,8 @@
         padding: 0 $tooltip-arrow-width;
         margin-left: -$tooltip-margin #{"/*rtl:"}$tooltip-margin#{"*/"};
     }
-}
 
-// Wrapper for the tooltip content
-.tooltip-body {
-    max-width: $tooltip-max-width;
-    padding: $tooltip-padding-y $tooltip-padding-x;
-    color: $tooltip-color;
-    text-align: center;
-    background-color: $tooltip-bg;
-    @include border-radius($tooltip-border-radius);
-}
-
-// Arrows
-.tooltip-arrow {
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-}
-.tooltip {
+    // Arrows
     &.top .tooltip-arrow {
         bottom: 0;
         left: 50% #{"/*rtl:ignore*/"};
@@ -78,10 +62,8 @@
         border-width: 0 $tooltip-arrow-width $tooltip-arrow-width;
         border-bottom-color: $tooltip-arrow-color;
     }
-}
 
-// Close
-.tooltip {
+    // Close
     .close {
         position: static;
         padding: $tooltip-padding-y $tooltip-padding-x;
@@ -97,3 +79,21 @@
     }
 }
 
+// Wrapper for the tooltip content
+.tooltip-body {
+    max-width: $tooltip-max-width;
+    padding: $tooltip-padding-y $tooltip-padding-x;
+    color: $tooltip-color;
+    text-align: center;
+    background-color: $tooltip-bg;
+    @include border-radius($tooltip-border-radius);
+}
+
+// Arrow base
+.tooltip-arrow {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+}
