--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -1,4 +1,4 @@
-// scss-lint:disable QualifyingElement
+// stylelint-disable selector-no-qualifying-type
 
 // Base button
 .btn {
@@ -53,6 +53,9 @@
             }
         }
     }
+
+    // Default color
+    @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border);
 }
 
 // Future-proof disabling of clicks on `<a>` elements
@@ -61,11 +64,7 @@ fieldset[disabled] a.btn {
     pointer-events: none;
 }
 
-
-// Base colors
-.btn {
-    @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border);
-}
+// Contextual color variants
 @each $theme, $colors in $context-themes {
     $color:        map-get($colors, "control-color");
     $bg:           map-get($colors, "control-bg");
@@ -79,7 +78,6 @@ fieldset[disabled] a.btn {
     }
 }
 
-
 // Outline variant - remove all backgrounds
 @each $theme, $colors in $context-themes {
     $color:        map-get($colors, "control-bg");
@@ -89,7 +87,6 @@ fieldset[disabled] a.btn {
         @include button-outline-variant($color, $border);
     }
 }
-
 
 // Link buttons
 // Make a button look and behave like a link
