--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -1,5 +1,3 @@
-// scss-lint:disable PropertyCount
-
 // Embedded icons from Open Iconic.
 // Released under MIT and copyright 2014 Waybury.
 // https://useiconic.com/open
@@ -194,7 +192,7 @@
         $sz-input-height:  (($sz-font-size * $input-line-height) + ($sz-padding-y * 2));
         $sz-select-height: calc(#{$sz-input-height} + #{($border-width * 2)});
 
-        //scss-lint:disable DuplicateProperty
+        // stylelint-disable declaration-block-no-duplicate-properties
         .custom-select-#{$size} {
             height: $sz-select-height;
             padding: $sz-padding-y ($sz-padding-x / 2);
@@ -202,7 +200,7 @@
             font-size: $sz-font-size;
             background-position: right ($sz-padding-x / 2) center;
         }
-        //scss-lint:enable DuplicateProperty
+        // stylelint-enable declaration-block-no-duplicate-properties
     }
 }
 
