--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -1,4 +1,4 @@
-// scss-lint:disable QualifyingElement
+// stylelint-disable selector-no-qualifying-type
 
 // Textual form controls
 .form-control {
