--- a/scss/core/_print.scss
+++ b/scss/core/_print.scss
@@ -1,4 +1,4 @@
-// scss-lint:disable ImportantRule, QualifyingElement
+// stylelint-disable declaration-no-important, selector-no-qualifying-type
 
 // Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css
 
