--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -1,5 +1,6 @@
-// Headings
+// stylelint-disable selector-list-comma-newline-after
 
+// Headings
 h1, .h1,
 h2, .h2,
 h3, .h3,
@@ -21,7 +22,6 @@ h5, .h5 { font-size: $font-size-h5; }
 h6, .h6 { font-size: $font-size-h6; }
 
 // Lead in
-
 .lead {
     font-size: $lead-font-size;
     font-weight: $lead-font-weight;
@@ -29,7 +29,6 @@ h6, .h6 { font-size: $font-size-h6; }
 }
 
 // Horizontal Rule
-
 hr {
     margin-top: $hr-spacer-y;
     margin-bottom: $hr-spacer-y;
@@ -38,7 +37,6 @@ hr {
 }
 
 // Emphasis
-
 small,
 .small {
     font-size: $small-font-size;
@@ -53,7 +51,6 @@ mark,
 }
 
 // Lists
-
 .list-unstyled {
     @include list-unstyled;
 }
@@ -71,7 +68,6 @@ mark,
 }
 
 //  Abbr extension
-
 .initialism {
     font-size: 90%;
     text-transform: uppercase;
@@ -79,7 +75,6 @@ mark,
 
 
 // Blockquotes
-
 .blockquote {
     margin-bottom: $spacer;
     font-size: $blockquote-font-size;
