--- a/scss/mixins/_background.scss
+++ b/scss/mixins/_background.scss
@@ -1,4 +1,4 @@
-// scss-lint:disable ImportantRule
+// stylelint-disable declaration-no-important
 
 // Contextual backgrounds
 @mixin bg-variant($parent, $color, $bg, $hover-bg) {
