--- a/scss/mixins/_clearfix.scss
+++ b/scss/mixins/_clearfix.scss
@@ -1,4 +1,4 @@
-// scss-lint:disable ImportantRule
+// stylelint-disable declaration-no-important
 
 // http://cssmojo.com/the-very-latest-clearfix-reloaded/
 @mixin clearfix() {
