--- a/scss/mixins/_float.scss
+++ b/scss/mixins/_float.scss
@@ -1,4 +1,4 @@
-// scss-lint:disable ImportantRule
+// stylelint-disable declaration-no-important
 
 @mixin float-start {
     float: left !important;
