--- a/scss/mixins/_reset-text.scss
+++ b/scss/mixins/_reset-text.scss
@@ -1,19 +1,19 @@
-//scss-lint:disable DuplicateProperty
+// stylelint-disable declaration-block-no-duplicate-properties
 
 @mixin reset-text {
     font-family: $font-family-base;
     // We deliberately do NOT reset font-size or word-wrap.
     font-style: normal;
     font-weight: $font-weight-normal;
-    letter-spacing: normal;
-    line-break: auto;
     line-height: $line-height-base;
+    line-break: auto;
     text-align: left; // Fallback for where `start` is not supported
     text-align: start;
     text-decoration: none;
     text-shadow: none;
     text-transform: none;
-    white-space: normal;
+    letter-spacing: normal;
     word-break: normal;
     word-spacing: normal;
+    white-space: normal;
 }
