--- a/scss/mixins/_text-emphasis.scss
+++ b/scss/mixins/_text-emphasis.scss
@@ -1,5 +1,4 @@
-// scss-lint:disable ImportantRule
-
+// stylelint-disable declaration-no-important
 
 // Contextual text
 @mixin text-emphasis-variant($parent, $color, $level-delta) {
