--- a/scss/component/_close.scss
+++ b/scss/component/_close.scss
@@ -23,7 +23,7 @@
 // stylelint-disable selector-no-qualifying-type, property-no-vendor-prefix
 button.close {
     padding: 0;
-    background: transparent;
+    background-color: transparent;
     border: 0;
     -webkit-appearance: none;
 }
