--- a/scss/component/_drag.scss
+++ b/scss/component/_drag.scss
@@ -25,7 +25,7 @@
 // stylelint-disable selector-no-qualifying-type, property-no-vendor-prefix
 button.drag {
     padding: 0;
-    background: transparent;
+    background-color: transparent;
     border: 0;
     -webkit-appearance: none;
 }
