--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -57,7 +57,7 @@
         color: $input-focus-color;
         background-color: $input-focus-bg;
         border-color: $input-focus-border-color;
-        outline: none;
+        outline: 0;
         @if ($enable-shadows) {
             box-shadow: $input-focus-box-shadow-inner, $input-focus-box-shadow-outer;
         } @else {
